--- a/styles.css
+++ b/styles.css
@@ -40,10 +40,29 @@ body {
     font-size: 1in;
     cursor: default;
     line-height: 1in;
+    transition: transform 0.25s linear, filter 0.50s ease-in;
+}
+
+#big-heart.tapped {
+    transform: scale(1.1);
 }
 
 .grayscale {
     filter: grayscale(1);
+}
+
+@keyframes grow {
+    0% {
+        scale: 1.0;
+    }
+
+    50% {
+        scale: 1.3;
+    }
+
+    100% {
+        scale: 1.0;
+    }
 }
 
 @keyframes float-1 {
