--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     user-select: none;
     background-color: black;
     width: 100vw;
-    height: 100vh;
+    height: 100dvh;
     padding: 0;
     margin: 0;
     display: flex;
