--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,21 @@ body {
     padding: 0;
     margin: 0;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 1em;
+}
+
+#stats {
+    height: 1em;
+    color: #666;
+    font-family: monospace;
+    transition: color 250ms ease-in-out;
+}
+
+#stats:empty {
+    color: black;
 }
 
 #container {
