--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,19 @@
   -webkit-tap-highlight-color: transparent;
   -webkit-user-select: none;
 }
+
 body {
-  user-select: none;
   background-color: black;
   width: 100vw;
   height: 100dvh;
-  padding: 0;
+  padding: 1em;
   margin: 0;
+}
+
+#root {
+  user-select: none;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
